Colors dropdown and main page overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -15,14 +15,16 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #1a1a1a;
   min-height: 75vh;
+  max-height: 75vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
 .App-login {
   background-color: #282c34;
   min-height: 100vh;
@@ -48,5 +50,5 @@
 }
 
 .main-area-container {
-  overflow: auto;
+  overflow: scroll;
 }
