--- a/src/components/FloorsPage/FloorsPage.css
+++ b/src/components/FloorsPage/FloorsPage.css
@@ -1,14 +1,13 @@
 .floor-container {
   background-color: #333333;
+  border-radius: 15px;
+  box-shadow: 0px 2px 10px rgba(3, 3, 3, 0.2);
 }
 .floor-card {
   position: relative; /* Changed to relative */
   top: 0; /* Changed to 0, you can adjust as needed */
   width: 321px;
   height: 57px;
-  background-color: #333333;
-  border-radius: 15px;
-  box-shadow: 0px 2px 10px rgba(3, 3, 3, 0.2);
   display: flex;
   align-items: center;
   padding: 0 10px;
@@ -19,9 +18,7 @@
   top: 0; /* Changed to 0, you can adjust as needed */
   width: 321px;
   height: 57px;
-  background-color: #333333;
-  border-radius: 15px;
-  box-shadow: 0px 2px 10px rgba(3, 3, 3, 0.2);
+
   display: flex;
   align-items: center;
   padding: 0 10px;
